[project]
name = "astrid"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "en-core-web-sm",
    "fastapi>=0.129.0",
    "kokoro>=0.9.4",
    "soundfile>=0.13.1",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
